--- a/index.html
+++ b/index.html
@@ -528,7 +528,7 @@
                         </div>
                     </div>
                     <div class="right-contact">
-                        <form action="mail.php" class="contact-form" method="post">
+                        <form action="mail.php" class="contact-form" method="get">
                             <div class="input-control i-c-2">
                                 <input name="name" type="text" required placeholder="YOUR NAME">
                                 <input name="emil" type="email" required placeholder="YOUR EMAIL">
